Add early repayment